[package]
name = "binary_macros"
version = "0.5.0"
authors = ["Pyry Kontio <pyry.kontio@drasa.eu>"]
description = "Macros for decoding base64-like encodings in string literals to [u8] literals."
license = "MIT"
repository = "https://github.com/golddranks/binary_macros"
readme = "README.md"
keywords = ["base64", "hex", "binary", "encoding", "decoding"]

[dependencies]
proc-macro-hack = { version = "0.3", default-features = false }
binary_macros_impl = { path = "binary_macros_impl" }

[dev-dependencies]
dotenv = "0.8"
