[package]
name = "binary_macros"
version = "1.0.0"
authors = ["Pyry Kontio <pyry.kontio@drasa.eu>"]
description = "Macros for decoding base64-like encodings in string literals to [u8] literals."
license = "MIT"
repository = "https://github.com/golddranks/binary_macros"
readme = "README.md"
keywords = ["base64", "hex", "binary", "encoding", "decoding"]
categories = ["encoding"]

[dependencies]
proc-macro-hack = "0.5.18"
binary_macros_impl = "1.0.0"

[dev-dependencies]
dotenv = "0.15"
