[package]
name = "binary_macros_impl"
version = "1.0.0"
authors = ["Pyry Kontio <pyry.kontio@drasa.eu>"]
description = "Procedural macro implementations for decoding base64-like encodings in string literals to [u8] literals."
license = "MIT"
repository = "https://github.com/golddranks/binary_macros/tree/master/binary_macros_impl"
readme = "../README.md"
keywords = ["base64", "hex", "binary", "encoding", "decoding"]

[dependencies]
proc-macro-hack = "0.5.16"
data-encoding = "2.3"
dotenv = "0.15"

[lib]
proc-macro = true
